# quick-findr

./: .gitignore  Cargo.toml  DEV_ROADMAP.md  README.md  UI_SPEC.md  analyze_and_fix.py  build.rs  clean_recent.py  fix_complete.py  fix_favorites.py  fix_final.py  fix_slint.ps1  rebuild_favorites_section.py
src/: engine.rs  favorites.rs  main.rs
test-data/enterprise-app/: pom.xml
test-data/enterprise-app/core-module/: pom.xml
test-data/enterprise-app/core-module/src/main/java/com/company/core/: Constants.java  Utils.java
test-data/enterprise-app/service-module/: pom.xml
test-data/enterprise-app/service-module/src/main/java/com/company/service/: OrderService.java  UserService.java
test-data/enterprise-app/web-module/: pom.xml
test-data/enterprise-app/web-module/src/main/java/com/company/web/: Application.java  UserController.java
test-data/enterprise-app/web-module/src/main/resources/: application.yml
ui/: app_window.slint  app_window_original.slint
