[package]
name = "quick-findr"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.9"
rayon = "1.10"
ignore = "0.4"
arboard = "3.4" 
num_cpus = "1.0"
dark-light = "1.0"
rfd = "0.14"
regex = "1.10"
window-vibrancy = "0.7.1" 
i-slint-backend-winit = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[build-dependencies]
slint-build = "1.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"